src/emit/snapshots/hebi__emit__tests__print_index_opt.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
v := {}
print ?v["a"]
print ?v["a"]["b"]["c"]


# Func:
function `main` (registers: 3, upvalues: 0, length: 34, constants: 4)
  0  | make_table_empty
  1  | store_global [0]; v
  3  | load_global [0]; v
  5  | store r0
  7  | load_const [1]; a
  9  | load_index_opt r0
  11 | print
  12 | load_global [0]; v
  14 | store r2
  16 | load_const [1]; a
  18 | load_index_opt r2
  20 | store r1
  22 | load_const [2]; b
  24 | load_index_opt r1
  26 | store r0
  28 | load_const [3]; c
  30 | load_index_opt r0
  32 | print
  33 | ret




