src/emit/snapshots/hebi__emit__tests__print_int.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
print 0

# Func:
function `main` (registers: 0, length: 4, constants: 0)
.code
  0 | load_smi 0
  2 | print
  3 | return




