src/emit/snapshots/hebi__emit__tests__print_list.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
print [0, 1, 2]

# Func:
function `main` (registers: 3, length: 17, constants: 0)
.code
  0  | load_smi 0
  2  | store r0
  4  | load_smi 1
  6  | store r1
  8  | load_smi 2
  10 | store r2
  12 | make_list r0 3
  15 | print
  16 | return




