src/emit/snapshots/hebi__emit__tests__print_module_var.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
v := 0
print v


# Func:
function `main` (registers: 1, length: 8, constants: 0)
.code
  0 | load_smi 0
  2 | store_module_var 0
  4 | load_module_var 0
  6 | print
  7 | return




