src/emit/snapshots/hebi__emit__tests__print_string.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
print "test"

# Func:
function `main` (registers: 0, upvalues: 0, length: 4, constants: 1)
  0 | load_const [0]; test
  2 | print
  3 | return




