src/emit/snapshots/hebi__emit__tests__while_break.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
while true:
  break


# Func:
function `test` (registers: 0, upvalues: 0, length: 8, constants: 2)
  0 | load_true
  1 | jump_if_false 6
  3 | jump 4
  5 | jump_loop 5
  7 | ret




