src/emit/snapshots/hebi__emit__tests__while_continue.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
while true:
  continue


# Func:
function `test` (registers: 0, upvalues: 0, length: 8, constants: 1)
  0 | load_true
  1 | jump_if_false 6
  3 | jump_loop 3
  5 | jump_loop 5
  7 | ret




