src/emit/snapshots/hebi__emit__tests__while_nested_loop_break.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
while true:
  loop:
    break
  break


# Func:
function `main` (registers: 0, upvalues: 0, length: 12, constants: 3)
  0  | load_true
  1  | jump_if_false 10
  3  | jump 4
  5  | jump_loop 2
  7  | jump 4
  9  | jump_loop 9
  11 | return




